# lambda-desktop

./: .gitignore  BUGS.md  CMakeLists.txt  README.md  TODO.md
apps/: CMakeLists.txt
apps/lambda-browser/: CMakeLists.txt  main.cpp
apps/lambda-editor/: CMakeLists.txt  EditorCommands.cpp  EditorCommands.hpp  main.cpp
apps/lambda-files/: FilesApp.hpp  FilesFlowGrid.hpp  FilesListView.hpp  FilesStore.cpp  FilesStore.hpp
apps/lambda-notifications/: CMakeLists.txt  main.cpp  org.freedesktop.Notifications.service.in
apps/lambda-polkit-agent/: CMakeLists.txt
apps/lambda-portal/: lambda.portal  main.cpp
apps/lambda-secrets/: CMakeLists.txt  main.cpp
apps/lambda-settings/: SettingsApp.hpp  SettingsBackend.cpp  SettingsTheme.hpp
apps/lambda-shell/: CMakeLists.txt
apps/lambda-shell/Shell/: ShellAppRegistry.cpp  ShellAudioControl.cpp  ShellAudioControl.hpp  ShellConnection.cpp  ShellController.cpp  ShellController.hpp  ShellDesktopView.hpp  ShellModel.cpp  ShellModel.hpp  ShellModels.cpp  ShellModels.hpp  ShellPreviewChrome.hpp  ShellSystemStatus.cpp  ShellSystemStatus.hpp  ShellViews.hpp
apps/lambda-status-notifier-watcher/: main.cpp
apps/lambda-terminal/: CMakeLists.txt  TerminalCore.cpp  TerminalCore.hpp  TerminalSession.cpp  main.cpp
apps/lambda-window-manager/: CMakeLists.txt
apps/lambda-window-manager/Compositor/: CompositorPresentation.hpp  CompositorRenderFrame.cpp  CompositorRenderFrame.hpp  CompositorRuntime.cpp  Presenter.cpp  SceneDamage.cpp  SceneDamage.hpp  WaylandServer.cpp  WaylandServer.hpp
examples/: CMakeLists.txt
examples/car-multimedia/chrome/: TopBar.hpp
examples/lambda-editor/: main.cpp
examples/lambda-files/: FilesApp.hpp  FilesFlowGrid.hpp  FilesGlyphs.hpp  FilesListView.hpp  FilesStore.cpp  FilesStore.hpp  FilesTheme.hpp  main.cpp
examples/lambda-preview/: main.cpp
examples/lambda-settings/: SettingsApp.hpp  SettingsBackend.cpp  SettingsBackend.hpp  SettingsTheme.hpp  main.cpp
examples/lambda-shell-preview/: main.cpp
examples/lambda-terminal/: TerminalCore.cpp  TerminalCore.hpp  TerminalSession.cpp  TerminalSession.hpp  main.cpp
examples/window-chrome-demo/: main.cpp
lambda-desktop/: CMakeLists.txt
lambda-desktop/apps/lambda-editor/: CMakeLists.txt  EditorCommands.cpp  EditorCommands.hpp  EditorDocument.cpp  EditorDocument.hpp  EditorFileWatcher.cpp  EditorFileWatcher.hpp  main.cpp
lambda-desktop/apps/lambda-files/: CMakeLists.txt  FilesApp.hpp  FilesFlowGrid.hpp  FilesFlowGridLayout.hpp  FilesGlyphs.hpp  FilesListView.hpp  FilesStore.cpp  FilesStore.hpp  FilesTheme.hpp  FilesTrace.hpp  main.cpp
lambda-desktop/docs/: TODO.md  compositor-user-guide.md  compositor-wlroots-improvement-plan.md  compositor.md  frame-pacing-improvement-plan.md  lambda-settings-ux-plan.md  linux-development.md  roadmap.md
lambda-desktop/scripts/: audit-todo019-validation-gates.sh  audit-wm-comp27-validation-gates.sh  run-real-app-smoke.sh  trace-compositor-cpu.sh  trace-terminal-rendering.sh  trace-terminal-resize.sh  verify-editor-file-watch.sh  verify-evemu-hardware-input.sh  verify-flux-clipboard.sh  verify-frame-pacing-linux.sh  verify-kms-vt-switch.sh  verify-macos-metal-editor-perf.sh  verify-wayland-client-pacing.sh  verify-wayland-resize-quiet.sh  verify-wayland-resize-recreate.sh  verify-wm-comp27-matrix.sh
lambda-desktop/tests/: BlueZTests.cpp  CMakeLists.txt  CompositorBufferReleaseTests.cpp  CompositorConfigHotReloadTests.cpp  CompositorConfigTests.cpp  CompositorCursorShapeTests.cpp  CompositorDataDeviceTests.cpp  CompositorDecorationStateTests.cpp  CompositorDmabufFeedbackTests.cpp  CompositorDmabufValidationTests.cpp  CompositorFractionalScaleTests.cpp  CompositorFrameSchedulerTests.cpp  CompositorGlobalResourceHygieneTests.cpp  CompositorIdleInhibitTests.cpp  CompositorLayerShellZoneTests.cpp  CompositorOutputSelectorTests.cpp  CompositorOutputStateTests.cpp  CompositorPointerExtensionTests.cpp  CompositorPresentationFeedbackTests.cpp  CompositorSceneDamageTests.cpp  CompositorScreenshotTests.cpp  CompositorSeatSerialTests.cpp  CompositorSnapshotBuilderTests.cpp  CompositorSubsurfaceHitTests.cpp  CompositorSurfaceUploadDamageTests.cpp  CompositorViewporterTests.cpp  CompositorVtSwitchShortcutTests.cpp  CompositorVulkanRenderTargetTests.cpp  CompositorWindowFrameGeometryTests.cpp  CompositorWindowGeometryTests.cpp  CompositorWindowStateTests.cpp  CompositorXdgOutputTests.cpp  DBusTestHelpers.hpp  DBusTests.cpp  EditorCommandsTests.cpp  EditorDocumentTests.cpp  EditorFileWatcherTests.cpp  FilesFlowGridTests.cpp  FilesStoreTests.cpp  LogindTests.cpp  (+25 more)
lambda-desktop/tools/: CMakeLists.txt  lambda-clipboard-probe.cpp  lambda-frame-artifact-check.cpp  lambda-presentation-feedback-check.cpp  malloc-count-preload.c
solitaire-app/: CMakeLists.txt  Info.plist.in  app-store-readiness.md  main.cpp  make-icns-from-svg.cmake  sign-and-package.sh
tests/: AlertTests.cpp  AnimationTests.cpp  BlueZTests.cpp  CMakeLists.txt  CompositorBufferReleaseTests.cpp  CompositorConfigTests.cpp  CompositorCursorShapeTests.cpp  CompositorDataDeviceTests.cpp  CompositorDecorationStateTests.cpp  CompositorDmabufValidationTests.cpp  CompositorFrameSchedulerTests.cpp  CompositorGlobalResourceHygieneTests.cpp  CompositorLayerShellZoneTests.cpp  CompositorOutputStateTests.cpp  CompositorPresentationFeedbackTests.cpp  CompositorSceneDamageTests.cpp  CompositorScreenshotTests.cpp  CompositorSeatSerialTests.cpp  CompositorSnapshotBuilderTests.cpp  CompositorSubsurfaceHitTests.cpp  CompositorViewporterTests.cpp  CompositorVtSwitchShortcutTests.cpp  CompositorWindowFrameGeometryTests.cpp  CompositorWindowGeometryTests.cpp  CompositorWindowStateTests.cpp  CompositorXdgOutputTests.cpp  DBusTestHelpers.hpp  DBusTests.cpp  EditorCommandsTests.cpp  EventQueueTests.cpp  FileDialogTests.cpp  FilesFlowGridTests.cpp  FilesStoreTests.cpp  ForTests.cpp  LogindTests.cpp  MPRISTests.cpp  MetalCanvasTests.mm  MountRootTests.cpp  NetworkManagerTests.cpp  NotificationsTests.cpp  (+22 more)
tools/: CMakeLists.txt  lambda-presentation-feedback-check.cpp
(+567 files in other folders)
